name:                raw-feldspar
version:             0.1
synopsis:            Resource-Aware Feldspar
description:         See README.md
license:             BSD3
license-file:        LICENSE
author:              Emil Axelsson
maintainer:          emax@chalmers.se
copyright:           Copyright (c) 2016 Anders Persson, Anton Ekblad, Emil Axelsson,
                                        Koen Claessen, Markus Aronsson, Máté Karácsony
                     Copyright (c) 2015 Emil Axelsson
category:            Language
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3

extra-source-files:
    README.md
    examples/*.hs
    tests/*.hs

source-repository head
  type:      git
  location: https://github.com/emilaxelsson/raw-feldspar.git

library
  exposed-modules:
    Data.Inhabited
    Data.TypedStruct
    Feldspar.Primitive.Representation
    Feldspar.Primitive.Backend.C
    Feldspar.Representation
    Feldspar.Sugar
    Feldspar.Frontend
    Feldspar.Optimize
    Feldspar.Storable
    Feldspar
    Feldspar.Run.Representation
    Feldspar.Run.Concurrent
    Feldspar.Run.Compile
    Feldspar.Run.Frontend
    Feldspar.Run.Marshal
    Feldspar.Run
    Feldspar.Hardware.Representation
    Feldspar.Hardware.Frontend
    Feldspar.Hardware.Compile
    Feldspar.Hardware
    Feldspar.Vector
    Feldspar.Option
    Feldspar.Validated

  other-modules:
    Data.Inhabited.TH

  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DefaultSignatures
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    PatternSynonyms
    Rank2Types
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    array,
    base < 5,
    constraints,
    containers,
    imperative-edsl >= 0.5,
    -- hardware-edsl >= 0.1.0.2,
    language-c-quote,
    mtl,
    operational-alacarte,
    prelude-edsl >= 0.4,
    syntactic >= 3.6,
    template-haskell

  hs-source-dirs: src

test-suite NumSimpl
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: NumSimpl.hs

  default-language: Haskell2010

  build-depends:
    base,
    mtl,
    raw-feldspar,
    syntactic,
    tasty-quickcheck,
    tasty-th

test-suite Compilation
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: Compilation.hs

  default-language: Haskell2010

  build-depends:
    base,
    mtl,
    raw-feldspar

test-suite Semantics
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: Semantics.hs

  default-language: Haskell2010

  build-depends:
    base,
    QuickCheck,
    raw-feldspar,
    tasty-quickcheck,
    tasty-th

test-suite Examples
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  default-language: Haskell2010

  default-extensions:
    FlexibleContexts
    ScopedTypeVariables

  build-depends:
    base,
    QuickCheck,
    raw-feldspar

