name:                raw-feldspar
version:             0.2
synopsis:            Resource-Aware Feldspar
description:         An implementation of the Feldspar EDSL with focus on
                     resource-awareness.
                     .
                     Examples can be found in the @examples/@ directory. The
                     files named "TutN_..." can be studied as a tutorial (to be
                     read in ascending order).
                     .
                     For more information, see the README:
                     <https://github.com/Feldspar/raw-feldspar/blob/master/README.md>
                     .
                     To see which GHC versions RAW-Feldspar can be built with,
                     consult the Travis status page:
                     <https://travis-ci.org/Feldspar/raw-feldspar>
license:             BSD3
license-file:        LICENSE
author:              Emil Axelsson
maintainer:          emax@chalmers.se
copyright:           Copyright (c) 2016 Anders Persson, Anton Ekblad, Emil Axelsson,
                                        Josef Svenningsson, Koen Claessen, Markus Aronsson,
                                        Máté Karácsony
                     Copyright (c) 2015 Emil Axelsson
homepage:            https://github.com/Feldspar/raw-feldspar
bug-reports:         https://github.com/Feldspar/raw-feldspar/issues
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    README.md
    examples/*.hs
    tests/*.hs

source-repository head
  type:      git
  location: https://github.com/Feldspar/raw-feldspar.git

library
  exposed-modules:
    Data.Inhabited
    Data.TypedStruct
    Data.Selection
    Feldspar.Primitive.Representation
    Feldspar.Primitive.Backend.C
    Feldspar.Representation
    Feldspar.Sugar
    Feldspar.Frontend
    Feldspar.Optimize
    Feldspar
    Feldspar.Run.Representation
    Feldspar.Run.Concurrent
    Feldspar.Run.Compile
    Feldspar.Run.Frontend
    Feldspar.Run.Marshal
    Feldspar.Run
    Feldspar.Data.Array
    Feldspar.Data.Buffered
    Feldspar.Data.Option
    Feldspar.Data.Queue
    Feldspar.Data.Storable
    Feldspar.Data.Validated
    Feldspar.Data.Vector
    Feldspar.Processing.Filters

  other-modules:
    Data.Inhabited.TH

  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DefaultSignatures
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    PatternSynonyms
    Rank2Types
    RecordWildCards
    PartialTypeSignatures
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    array,
    base < 5,
    constraints,
    containers,
    data-default-class,
    data-hash,
    imperative-edsl >= 0.7,
    -- hardware-edsl >= 0.1.0.2,
    language-c-quote,
    mtl,
    operational-alacarte,
    prelude-edsl >= 0.4,
    syntactic >= 3.6.1,
      -- Smallest version that has `instD`
    template-haskell

  hs-source-dirs: src

  ghc-options:
    -fno-warn-partial-type-signatures

test-suite NumSimpl
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: NumSimpl.hs

  default-language: Haskell2010

  build-depends:
    base,
    mtl,
    raw-feldspar,
    syntactic,
    tasty-quickcheck,
    tasty-th

test-suite Compilation
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: Compilation.hs

  default-language: Haskell2010

  build-depends:
    base,
    mtl,
    raw-feldspar

test-suite Semantics
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: Semantics.hs

  default-language: Haskell2010

  default-extensions:
    FlexibleContexts
    ScopedTypeVariables

  build-depends:
    base,
    QuickCheck,
    raw-feldspar,
    tasty,
    tasty-quickcheck,
    tasty-th

test-suite Examples
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  default-language: Haskell2010

  build-depends:
    base,
    QuickCheck,
    raw-feldspar,
    tasty,
    tasty-hunit,
    tasty-quickcheck

