name:                raw-feldspar
version:             0.4.1
synopsis:            Resource-Aware Feldspar
description:         An implementation of the Feldspar EDSL with focus on
                     resource-awareness.
                     .
                     Examples can be found in the @examples/@ directory. The
                     files named "TutN_..." can be studied as a tutorial (to be
                     read in ascending order).
                     .
                     For more information, see the README:
                     <https://github.com/Feldspar/raw-feldspar/blob/master/README.md>
                     .
                     To see which GHC versions RAW-Feldspar can be built with,
                     consult the Travis status page:
                     <https://travis-ci.org/Feldspar/raw-feldspar>
license:             BSD3
license-file:        LICENSE
author:              Emil Axelsson
maintainer:          78emil@gmail.com
copyright:           Copyright (c) 2016 Anders Persson, Anton Ekblad, Emil Axelsson,
                                        Josef Svenningsson, Koen Claessen, Markus Aronsson,
                                        Máté Karácsony
                     Copyright (c) 2015 Emil Axelsson
homepage:            https://github.com/Feldspar/raw-feldspar
bug-reports:         https://github.com/Feldspar/raw-feldspar/issues
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    README.md
    examples/*.hs
    tests/*.hs

source-repository head
  type:      git
  location: https://github.com/Feldspar/raw-feldspar.git

library
  exposed-modules:
    Data.Inhabited
    Data.TypedStruct
    Data.Selection
    Feldspar.Primitive.Representation
    Feldspar.Primitive.Backend.C
    Feldspar.Representation
    Feldspar.Sugar
    Feldspar.Frontend
    Feldspar.Optimize
    Feldspar
    Feldspar.Run.Representation
    Feldspar.Run.Concurrent
    Feldspar.Run.Compile
    Feldspar.Run.Frontend
    Feldspar.Run.Marshal
    Feldspar.Run
    Feldspar.Data.Array
    Feldspar.Data.Buffered
    Feldspar.Data.Option
    Feldspar.Data.Queue
    Feldspar.Data.Storable
    Feldspar.Data.Validated
    Feldspar.Data.Vector
    Feldspar.Processing.Filters

  other-modules:
    Data.Inhabited.TH

  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DefaultSignatures
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    PatternSynonyms
    Rank2Types
    RecordWildCards
    PartialTypeSignatures
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    array < 0.6,
    base < 5,
    constraints < 0.14,
    containers < 0.7,
    data-default-class < 0.2,
    data-hash < 0.3,
    imperative-edsl >= 0.9 && < 0.10,
    language-c-quote < 0.14,
    mtl < 2.3,
    operational-alacarte,
    prelude-edsl >= 0.4,
    syntactic >= 3.8,
      -- That version fixes overlap bugs
    template-haskell < 2.19

  if impl(ghc == 8.0.*)
    build-depends:
      language-c-quote < 0.12
      -- ,
      -- mainland-pretty >= 0.6

  hs-source-dirs: src

  ghc-options:
    -fno-warn-partial-type-signatures

test-suite NumSimpl
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: NumSimpl.hs

  default-language: Haskell2010

  build-depends:
    base,
    mtl,
    raw-feldspar,
    syntactic,
    tasty-quickcheck,
    tasty-th

test-suite Compilation
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: Compilation.hs

  default-language: Haskell2010

  build-depends:
    base,
    mtl,
    raw-feldspar

  if impl(ghc >= 8.0)
    ghc-options: -Wno-simplifiable-class-constraints

test-suite Semantics
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: Semantics.hs

  default-language: Haskell2010

  default-extensions:
    FlexibleContexts
    ScopedTypeVariables

  build-depends:
    base,
    QuickCheck,
    raw-feldspar,
    tasty,
    tasty-quickcheck,
    tasty-th

  if impl(ghc >= 8.0)
    ghc-options: -Wno-simplifiable-class-constraints

test-suite Examples
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  other-modules:
    Concurrent
    DFT
    FFT
    Tut1_HelloWorld
    Tut2_ExpressionsAndTypes
    Tut3_Vectors
    Tut4_MemoryManagement
    Tut5_Matrices
    Tut6_Testing
    Tut7_ImperativeProgramming
    Tut8_SequentialVectors

  default-language: Haskell2010

  build-depends:
    base,
    QuickCheck,
    raw-feldspar,
    tasty,
    tasty-hunit,
    tasty-quickcheck

  if impl(ghc >= 8.0)
    ghc-options: -Wno-simplifiable-class-constraints

